examples/invalid/variables2.cp
var i : type_that_does_not_exist;